@@ -92,6 +92,7 @@ bootstrap-xsyms bootstrap-cexp:
 bootstrap: bootstrap-cexp
 	(cd libtecla; $(AUTOCONF))
 	(cd regexp;   $(ACLOCAL) && $(AUTOCONF) && $(AUTOMAKE) -ac$(AUTOFORCE))
+	(cd pmbfd;    $(ACLOCAL) && $(AUTOCONF) && $(AUTOMAKE) -ac$(AUTOFORCE))
 
 clean-xsyms:
 	$(RM) xsyms
